--- a/static/templates/about.html
+++ b/static/templates/about.html
@@ -143,6 +143,7 @@
             <div class="col-sm-6">Daniel Berger</div>
             <div class="col-sm-6">Tim Byrne</div>
             <div class="col-sm-6">Mickaël Camelot</div>
+            <div class="col-sm-6">Christian Holm Christensen</div>
             <div class="col-sm-6">Claudio Ciardelli</div>
             <div class="col-sm-6">Federico Corso</div>
             <div class="col-sm-6">Jim Cotugno</div>
