Add Debian package to downloads
This patch will add the Debian package to the possible downloads.  When
the front page is reached by a Linux user, two buttons will be shown -
one for the Debian package and one for Generic Linux.  In other cases,
only one button will be shown.

On the download page, the Debian package is listed under Linux.

On the `download.html` page, the entries have been re-organised to
better line up, making the page more aestitically pleasing.

Also on the `download.html` page links have been added to the forum
installation instructions and the trouble-shooting post.

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -15,6 +15,7 @@
     <div class="container px-4 pt-5 mt-5 mb-5 text-center">
       <h1 class="display-4 fw-bold">Play boardgames, virtually</h1>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-4">
+        <a id="download_deb" class="btn btn-primary btn-lg px-4" href=""></a>
         <a id="download_btn" class="btn btn-primary btn-lg px-4" href="/download.html">Get Vassal</a>
       </div>
       <div id="alt_downloads" class="gap-2 justify-content-sm-center container mt-1">
