--- a/static/templates/download.html
+++ b/static/templates/download.html
@@ -42,14 +42,31 @@
             <p style="margin-top: 1ex">Download and then double-click
             to install:</p>
             <div class="list-group">
-              <a class="list-group-item list-group-item-action d-flex gap-3 py-3 w-100" href="https://github.com/vassalengine/vassal/releases/download/{{current_version}}/vassal_{{current_version}}-1_all.deb">
+              <a class="list-group-item list-group-item-action d-flex gap-3 py-3 w-100" href="https://github.com/vassalengine/vassal/releases/download/{{current_version}}/vassal-{{current_version}}-1.noarch.deb">
                 <div>
                   <h6>.deb for Debian and derivatives</h6>
                   <p class="mb-0 text-muted">vassal_{{current_version}}-1_all.deb</p>
                 </div>
               </a>                
+              <a class="list-group-item list-group-item-action d-flex gap-3 py-3 w-100" href="https://github.com/vassalengine/vassal/releases/download/{{current_version}}/vassal_{{current_version}}-1_all.deb">
+                <div>
+                  <h6>.rpm for RedHat and derivatives</h6>
+                  <p class="mb-0 text-muted">vassal-{{current_version}}-1.noarch.rpm</p>
+                </div>
+              </a>                
             </div>
             
+            <p style="margin-top: 1ex">Download recipe, and install
+              with <c>flatpak-builder</c>:</p>
+            <div class="list-group">
+              <a class="list-group-item list-group-item-action d-flex gap-3 py-3 w-100" href="https://github.com/vassalengine/vassal/releases/download/{{current_version}}/VASSAL-{{current_version}}-flatpak.yaml">
+                <div>
+                  <h6>.yaml recipe</h6>
+                  <p class="mb-0 text-muted">VASSAL-{{current_version}}-flatpak.yaml</p>
+                </div>
+              </a>
+            </div>
+              
             <p style="margin-top: 1ex">Ensure that you have Java 11 (or later) installed. Then download and unpack the tarball:</p>
             <div class="list-group">
               <a class="list-group-item list-group-item-action d-flex gap-3 py-3 w-100" href="https://github.com/vassalengine/vassal/releases/download/{{current_version}}/VASSAL-{{current_version}}-linux.tar.bz2">
@@ -61,7 +78,7 @@
             </div>
           </div>
         </div>
-
+        
          <!-- Windows -->
 
         <div class="col d-flex align-items-start">
