--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -16,6 +16,8 @@
       <h1 class="display-4 fw-bold">Play boardgames, virtually</h1>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-4">
         <a id="download_deb" class="btn btn-primary btn-lg px-4" href=""></a>
+        <a id="download_rpm" class="btn btn-primary btn-lg px-4" href=""></a>
+        <a id="download_flp" class="btn btn-primary btn-lg px-4" href=""></a>
         <a id="download_btn" class="btn btn-primary btn-lg px-4" href="/download.html">Get Vassal</a>
       </div>
       <div id="alt_downloads" class="gap-2 justify-content-sm-center container mt-1">
