Add download links for Debian and RedHat packages
This will add download links for the Debian and RedHat packages.

Since, on Linux, we cannot detect the distribution used by the client,
we must give the all options for _any_ Linux client.  Rather than
having 3 different buttons, the `index.html` page will show a single
button, and when the user hovers over that, the user will be presented
with a drop-down menu to select between `Generic`, `Debian and
derivatives`, and `RedHat and derivatives`.

I think this is a better option than redirecting Linux users to the
`download.html` page.

The PR also adds Debian and RedHat package links to the
`download.html` page, as well as a short instruction on how to install
the _FlatPak_ package.

Finally, the PR adds a link to the more verbose installation
instructions on the Forum, as well as a link to the common problems
post on the Forum.

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -16,6 +16,14 @@
       <h1 class="display-4 fw-bold">Play boardgames, virtually</h1>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-4">
         <a id="download_btn" class="btn btn-primary btn-lg px-4" href="/download.html">Get Vassal</a>
+        <div id="linux" class="dropdown">
+          <button id='linux' class="btn btn-primary btn-lg px-4 dropdown">Get Vassal for Linux</button>
+          <div class="dropdown-content btn btn-primary">
+            <a id="linux-tar" class="btn btn-primary" href="#">Generic</a>
+            <a id="linux-deb" class="btn btn-primary" href="#">Debian and derivatives</a>
+            <a id="linux-rpm" class="btn btn-primary" href="#">RedHat and derivatives</a>
+          </div>
+        </div>
       </div>
       <div id="alt_downloads" class="gap-2 justify-content-sm-center container mt-1">
         <div class="row">
